<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  https://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Abdsandryk Souza - initial API and implementation
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/closing_day_reference_period"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20px"
        android:paddingBottom="10px"
        android:text="@string/reference_period" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/regular_closing_day"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/regular_closing_day" />

        <RadioButton
            android:id="@+id/custom_closing_day"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_closing_day" />

    </RadioGroup>

    <EditText
        android:id="@+id/new_closing_day"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/day_of_month"
        android:inputType="number"
        android:maxLength="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        style="@style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/closing_day_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/closing_day_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>
