<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Denis Solonenko - initial API and implementation
-->
<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
    a:layout_width="fill_parent"
    a:layout_height="fill_parent"
    a:orientation="vertical"
    a:paddingLeft="3dp"
    a:paddingTop="3dp"
    a:paddingRight="3dp">

    <LinearLayout
        a:id="@+id/list"
        a:layout_width="fill_parent"
        a:layout_height="wrap_content"
        a:orientation="vertical">

        <TextView
            a:layout_width="fill_parent"
            a:layout_height="wrap_content"
            a:text="@string/sms_number" />

        <EditText
            a:id="@+id/sms_number"
            a:layout_width="fill_parent"
            a:layout_height="wrap_content"
            a:hint="@string/sms_number_hint" />

        <TextView
            a:id="@+id/sms_tpl_title"
            a:layout_width="fill_parent"
            a:layout_height="wrap_content"
            a:text="@string/sms_tpl_title" />

        <TextView
            a:id="@+id/sms_tpl_desc"
            a:layout_width="fill_parent"
            a:layout_height="wrap_content"
            a:text="@string/sms_tpl_desc"
            a:visibility="gone" />

        <EditText
            a:id="@+id/sms_template"
            a:layout_width="fill_parent"
            a:layout_height="wrap_content"
            a:gravity="top"
            a:hint="@string/sms_tpl_hint" />

        <EditText
            a:id="@+id/sms_example"
            a:layout_width="fill_parent"
            a:layout_height="wrap_content"
            a:alpha="0.5"
            a:hint="@string/sms_tpl_check" />

        <LinearLayout
            a:id="@+id/list2"
            a:layout_width="fill_parent"
            a:layout_height="wrap_content"
            a:orientation="vertical" />

        <TextView
            a:layout_width="fill_parent"
            a:layout_height="wrap_content"
            a:paddingTop="5dp"
            a:text="@string/choose_sms_template_type_and_account" />

        <LinearLayout
            a:layout_width="fill_parent"
            a:layout_height="wrap_content"
            a:orientation="horizontal"
            a:paddingLeft="0dp"
            a:paddingTop="0dp"
            a:paddingRight="0dp"
            a:paddingBottom="30dp">

            <ToggleButton
                a:id="@+id/toggle"
                a:layout_width="wrap_content"
                a:layout_height="fill_parent"
                a:background="@drawable/btn_toggle_income_expense_bg"
                a:minWidth="40dp"
                a:textOff=""
                a:textOn="" />

            <Spinner
                a:id="@+id/spinnerAccount"
                a:layout_width="match_parent"
                a:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


    <include layout="@layout/ok_cancel_buttons" />
</LinearLayout>
