<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_permissions_title" />

        <TextView
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/request_permissions_description" />

        <RelativeLayout
            android:id="@+id/toggleWriteStorageWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/toggleWriteStorageTitle"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/toggleWriteStorage"
                android:layout_alignParentStart="true"
                android:text="@string/request_permissions_storage_title" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toggleWriteStorageTitle"
                android:text="@string/request_permissions_storage_description" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toggleWriteStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/toggleGetAccountsWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/toggleGetAccountsTitle"
                style="@android:style/TextAppearance.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/toggleGetAccounts"
                android:layout_alignParentStart="true"
                android:text="@string/request_permissions_get_accounts_title" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toggleGetAccountsTitle"
                android:text="@string/request_permissions_get_accounts_description" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toggleGetAccounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/toggleCameraWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/toggleCameraTitle"
                style="@android:style/TextAppearance.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/toggleCamera"
                android:layout_alignParentStart="true"
                android:text="@string/request_permissions_camera_title" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toggleCameraTitle"
                android:text="@string/request_permissions_camera_description" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toggleCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/toggleSmsWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/toggleSmsTitle"
                style="@android:style/TextAppearance.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/toggleSms"
                android:layout_alignParentStart="true"
                android:text="@string/request_permissions_receive_sms_title" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toggleSmsTitle"
                android:text="@string/request_permissions_receive_sms_description" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toggleSms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
