<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  https://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Denis Solonenko - initial API and implementation
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="3dp"
    android:paddingTop="3dp"
    android:paddingRight="3dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/attribute_name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/attribute_type" />

    <Spinner
        android:id="@+id/type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/attribute_types"
        android:prompt="@string/attribute_type" />

    <LinearLayout
        android:id="@+id/values_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/attribute_values" />

        <EditText
            android:id="@+id/values"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/attribute_values_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/default_value_layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/attribute_default_value" />

        <EditText
            android:id="@+id/default_value_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/default_value_check"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/attribute_default_value" />

    <include layout="@layout/ok_cancel_buttons" />
</LinearLayout>
